# binexp-practice

./: .gitignore
fuzzing/emu-fuzzer/: .gitignore  Cargo.toml  README.md
fuzzing/emu-fuzzer/crashes/: crash-at-11d8c
fuzzing/emu-fuzzer/riscv/: Makefile  README.md  echo-argv  echo-argv.c  echo-file  echo-file.c  hello_world  hello_world.c  minimal  shift  shift.c  text-file-parser
fuzzing/emu-fuzzer/shared/atomicvec/src/: lib.rs
fuzzing/emu-fuzzer/src/: emu.rs  files.rs  jitcache.rs  main.rs  mmu.rs  riscv.rs  syscall.rs  ui.rs  util.rs
fuzzing/naive-fuzzer/: .gitignore  Cargo.toml  README.md
fuzzing/naive-fuzzer/corpus/: lipsum.vf
fuzzing/naive-fuzzer/src/: main.rs
nightmare/: README.md
nightmare/6_Z3_and_SymbolicExecution/Securityfest-fairlight/: .gitignore  solve.py
nightmare/6_Z3_and_SymbolicExecution/TUCTF-future/: solve.py
nightmare/7_ROP/ret2csu/ropemporium-ret2csu/: .gitignore  flag.txt  solve.py
nightmare/7_ROP/sigrop/swampctf-syscaller/: solve.py
nightmare/7_ROP/stack_pivotting/defcon_speedrun/: .gitignore  solve.py
nightmare/7_ROP/stack_pivotting/xctf-b0verflow/: .gitignore  solve.py
v8/helpers/: shellcode.py  template.js
v8/horsepower/: exploit.js
v8/turboflan/: exploit.js
vulnerable_programs/text_file_parser/: .gitignore  Makefile  dns.vf  more_vuln  vuln.c
vulnerable_programs/text_file_parser/exploit/: .gitignore  exploit.py  exploit.vf
