[package]
name = "emu-fuzzer"
version = "0.1.0"
authors = ["Rick de Jager <rickdejager99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Handy dandy crate for ELF/PE parsing
goblin = "0.4"
# Fast, non-cryptographically secure hashing for deduping
meowhash = "0.3"

[profile.release]
#lto = "fat"
overflow-checks=true
