[package]
name = "emu-fuzzer"
version = "0.1.0"
authors = ["Rick de Jager <rickdejager99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Handy dandy crate for ELF/PE parsing
goblin = "0.4"
# Fast, non-cryptographically secure hashing for deduping
meowhash = "0.3"

# Lock-free, fast data-scructures, curtosy of gamozolabs:
# https://github.com/gamozolabs/fuzz_with_emus/tree/master/shared
aht = { path = "shared/aht" }
atomicvec = { path = "shared/atomicvec" }

[profile.release]
#lto = "fat"
overflow-checks=true
